# blink

./: CMakeLists.txt  README.md
examples/: basic.bl  basic.c  comments  comments.bl  condition  condition.bl  for_cycle.bl  func_decl  func_decl.bl  func_decl.c  var_asgn.bl  var_decl.bl  var_decl.c  while_cycle.bl
examples/include/: include.bl  included_file.bl
include/codegen/: codegen.hpp
include/exception/: exception.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
include/semantic/: semantic.hpp
src/: main.cpp
src/codegen/: codegen.cpp
src/exception/: exception.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/semantic/: semantic.cpp
